infra/k8s/atem-control/001-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atem-control
  namespace: default
spec:
  selector:
    matchLabels:
      app: atem-control
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: atem-control
    spec:
      containers:
      - name: atem-control
        image: frikanalen/atem-control:latest
        ports:
          - name: web
            containerPort: 80
